# root

README/ReleaseNotes/v612/: index.md
cmake/modules/: SearchInstalledSoftware.cmake  SearchRootCoreDeps.cmake
core/: CMakeLists.txt
core/accelogic/: CMakeLists.txt
core/accelogic/doc/: README.md
core/accelogic/inc/: ZipAccelogic.h
core/accelogic/src/: ZipAccelogic.cxx
core/base/inc/: TDirectory.h  TNotifyLink.h
core/base/src/: TBuffer.cxx  TDatime.cxx  TDirectory.cxx  TStorage.cxx  TUUID.cxx
core/clingutils/src/: TClingUtils.cxx
core/cont/inc/: TCollection.h
core/cont/src/: TClassTable.cxx  TCollection.cxx  TList.cxx  TObjArray.cxx
core/foundation/: CMakeLists.txt
core/foundation/inc/: EDataType.h
core/foundation/src/: TClassEdit.cxx
core/meta/inc/: TClass.h  TDataType.h  TInterpreter.h  TStreamerElement.h  TVirtualStreamerInfo.h
core/meta/src/: TCheckHashRecurveRemoveConsistency.h  TClass.cxx  TDataMember.cxx  TIsAProxy.cxx  TStreamerElement.cxx  TVirtualStreamerInfo.cxx
core/metacling/src/: CMakeLists.txt  TCling.cxx  TCling.h  TClingClassInfo.cxx  TClingClassInfo.h
core/thread/test/: testInterpreterLock.cxx
core/zip/: CMakeLists.txt
core/zip/inc/: Compression.h  RZip.h
core/zip/src/: Compression.cxx  PrecisionCascadeConfigArrayContent.h  RZip.cxx
io/io/inc/: TFile.h  TStreamerInfo.h
io/io/src/: TBufferMerger.cxx  TDirectoryFile.cxx  TEmulatedCollectionProxy.cxx  TFile.cxx  TFileMerger.cxx  TGenCollectionProxy.cxx  TMemFile.cxx  TStreamerInfo.cxx
main/src/: hadd.cxx
tree/tree/: CMakeLists.txt
tree/tree/inc/: LinkDef.h  (+11 more)
(+25 files in other folders)
